Start with basic HTML

--- a/web-base/index.html
+++ b/web-base/index.html
@@ -4,4 +4,9 @@
     <head>
         <title> WebBase form Rafaela Batista</title>
     </head>
+
+    <body>
+        <h1>Automatizando com a Rafinha</h1>
+        <p>Vamos estudar automação até ficar foda!</p>
+    </body>
 </html>
